feat: game handler
